# click-helper

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  start.sh
src/click_helper/: main.py
src/click_helper/config/: logging_config.py
src/click_helper/domain/: command_map.py
src/click_helper/files/: command_script.yaml
src/click_helper/handlers/: keyboard_handler.py  log_handler.py  mouse_handler.py  process_handler.py  util_handler.py
src/click_helper/scripts/: click_helper.py
