[project]
name = "click-helper"
version = "0.0.1"
description = "A simple utility for automating clicks and commands in an application."
authors = []
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyautogui>=0.9.53",
    "pyyaml>=6.0.2",
    "structlog>=22.1.0",
]

[tool.poetry]
packages = [{include = "click_helper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
